--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <main class="card">
-    <img src="/images/image-qr-code.png" alt="QR code image" class="card__image">
+    <img src="./images/image-qr-code.png" alt="QR code image" class="card__image">
     <h2>Improve your front-end skills by building projects</h2>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     <div class="attribution">
